--- a/pages/sample-pages_tor/calender_01.html
+++ b/pages/sample-pages_tor/calender_01.html
@@ -76,7 +76,7 @@
               <p>ประกบผ้า</p>
             </a>
           </li>
-          <li class="d-flex flex-column">
+          <li class="d-flex flex-column active">
             <a href="11_calender.html">
               <i class="nav-icon"></i>
               <p>เคลือบผิว</p>
@@ -106,7 +106,7 @@
               <p>งานอบสายพาน(บันทึกการอบสายพาน)</p>
             </a>
           </li>
-          <li class="d-flex flex-column active">
+          <li class="d-flex flex-column">
             <a data-toggle="collapse" href="#tables" class="nav-link collapsed" aria-expanded="false">
               <p>คลังสินค้า
                 <i class="fa fa-sort-desc submenu-toggle"></i>
@@ -117,7 +117,7 @@
                 <li>
                   <a class="nav-link" href="4_Stock_Compound_NonCompound.html">คลังสินค้า</a>
                 </li>
-                <li class="active">
+                <li>
                   <a class="nav-link" href="4_In_Stock.html">นำเข้าคลังสินค้า</a>
                 </li>
                 <li>
@@ -154,7 +154,7 @@
       </div>
     </div>
     <div class="main-panel">
-      <nav class="navbar navbar-default navbar-toggleable-md navbar-inverse" style="opacity: 0.5;">
+      <nav class="navbar navbar-default navbar-toggleable-md navbar-inverse">
         <div class="navbar-minimize">
           <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
             <i class="ti-arrow-left"></i>
@@ -164,7 +164,7 @@
           <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarItems" aria-controls="navbarItems" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#">การนำเข้าคลังสินค้า</a>
+          <a class="navbar-brand" href="#">เคลือบผิว</a>
         </div>
         <div class="collapse navbar-collapse" id="navbarItems">
           <ul class="nav navbar-nav ml-auto">
@@ -276,58 +276,32 @@
                     </div>
                   </div>
                 </div>
-                <div class="card p-2">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <h5>นำเข้าคลังสินค้า
-                        <br> </h5>
-                    </div>
-                    <div class="col-md-6 text-right"> </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-4">
-                      <div class="p-2 ">
-                        <label for="inputGrade" class="col-form-label">ประเภทที่นำเข้า</label>
-                        <div class="dropdown">
-                          <select id="country" required="" class="form-control">
-                            <option value="">เลือกสูตรยาง</option>
-                          </select>
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">P</a>
-                            <a class="dropdown-item" href="#">N</a>
-                            <a class="dropdown-item" href="#">M</a>
-                            <a class="dropdown-item" href="#">OR-1</a>
-                            <a class="dropdown-item" href="#">OR-2</a>
-                            <a class="dropdown-item" href="#">HR-100</a>
-                            <a class="dropdown-item" href="#">HR-120</a>
-                            <a class="dropdown-item" href="#">HR-150</a>
-                            <a class="dropdown-item" href="#">ทดกรด/ต่าง</a>
-                            <a class="dropdown-item" href="#">ยิงทราย</a>
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="card">
+                      <div class="card-header"> ตั้งค่าการทำงาน </div>
+                      <div class="card-body p-2">
+                        <div class="form-row form-inline">
+                          <div class="form-group col-md-3">
+                            <label> เวลาเข้า </label>
+                            <div class="input-group">
+                              <input type="text" class="form-control">
+                              <div class="input-group-append px-2 pt-2 border-1 text-muted"> น. </div>
+                            </div>
                           </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-4">
-                      <div class="p-2 ">
-                        <label for="inputBeltWidth" class="col-form-label">ความยาว</label>
-                        <input type="text" class="form-control" id="inputBeltWidth" placeholder="ระบุเลขที่"> </div>
-                    </div>
-                    <div class="col-md-4">
-                      <div class="p-2 ">
-                        <label for="inputGrade" class="col-form-label">&nbsp;</label>
-                        <div class="dropdown">
-                          <a href="#" class="btn btn-outline-primary pull-right btn-block">บันทึก</a>
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">P</a>
-                            <a class="dropdown-item" href="#">N</a>
-                            <a class="dropdown-item" href="#">M</a>
-                            <a class="dropdown-item" href="#">OR-1</a>
-                            <a class="dropdown-item" href="#">OR-2</a>
-                            <a class="dropdown-item" href="#">HR-100</a>
-                            <a class="dropdown-item" href="#">HR-120</a>
-                            <a class="dropdown-item" href="#">HR-150</a>
-                            <a class="dropdown-item" href="#">ทดกรด/ต่าง</a>
-                            <a class="dropdown-item" href="#">ยิงทราย</a>
+                          <div class="form-group col-md-3">
+                            <label> เวลาออก </label>
+                            <div class="input-group">
+                              <input type="text" class="form-control">
+                              <div class="input-group-append px-2 pt-2 border-1 text-muted"> น. </div>
+                            </div>
+                          </div>
+                          <div class="form-group col-md-4">
+                            <label> รอบความเร็ว </label>
+                            <div class="input-group">
+                              <input type="text" class="form-control">
+                              <div class="input-group-append px-2 pt-2 border-1 text-muted"> ชม./นาที </div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -335,31 +309,263 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-12"> </div>
+                  <div class="col-md-12">
+                    <div class="card">
+                      <div class="card-header"> บันทึกเพิ่มเติม </div>
+                      <div class="card-body p-2">
+                        <textarea class="form-control" value="สำหรับบันทึกข้อมูลการทำงานอื่นๆ"> </textarea>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-12"> </div>
+                  <div class="col-md-12">
+                    <div class="card">
+                      <div class="card-body p-2">
+                        <ul class="nav nav-tabs">
+                          <li class="nav-item">
+                            <a href="" class="active nav-link" data-toggle="tab" data-target="#table_one"> ความหนา </a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="" data-toggle="tab" data-target="#table_two"> อุณหภูมิ </a>
+                          </li>
+                        </ul>
+                        <div class="tab-content mt-2">
+                          <div class="tab-pane top-border fade show active" id="table_one" role="tabpanel">
+                            <table class="table">
+                              <thead>
+                                <tr>
+                                  <th>#</th>
+                                  <th>ระยะ</th>
+                                  <th>หนาบน</th>
+                                  <th>หนาล่าง</th>
+                                  <th>หนารวม</th>
+                                  <th></th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr>
+                                  <td>1</td>
+                                  <td>10 เมตร
+                                    <br> </td>
+                                  <td>xx</td>
+                                  <td>xx</td>
+                                  <td>xx</td>
+                                  <td>
+                                    <button> แก้ไข </button>
+                                    <button> ลบ </button>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td>2</td>
+                                  <td>20 &nbsp;เมตร</td>
+                                  <td>xx</td>
+                                  <td>xx</td>
+                                  <td>xx</td>
+                                  <td>
+                                    <button> แก้ไข </button>
+                                    <button> ลบ </button>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td>3</td>
+                                  <td>50 เมตร
+                                    <br> </td>
+                                  <td>xx</td>
+                                  <td>xx</td>
+                                  <td>xx</td>
+                                  <td>
+                                    <button> แก้ไข </button>
+                                    <button> ลบ </button>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                            <div class="card-body d-flex p-2 top-border">
+                              <div>
+                                <button> บันทึกการตรวจสอบความหนา </button>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="tab-pane top-border fade" id="table_two" role="tabpanel">
+                            <table class="table">
+                              <thead>
+                                <tr>
+                                  <th>#</th>
+                                  <th>เวลา</th>
+                                  <th>ลูกกลิ้ง 1</th>
+                                  <th>ลูกกลิ้ง 2</th>
+                                  <th>ลูกกลิ้ง 3</th>
+                                  <th>ลูกกลิ้ง 4</th>
+                                  <th></th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr>
+                                  <td>1</td>
+                                  <td>xx:xx</td>
+                                  <td>xx</td>
+                                  <td>xx</td>
+                                  <td>xx</td>
+                                  <td>xx</td>
+                                  <td>
+                                    <button> แก้ไข </button>
+                                    <button> ลบ </button>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td>2</td>
+                                  <td>xx:xx</td>
+                                  <td>xx</td>
+                                  <td>xx</td>
+                                  <td>xx</td>
+                                  <td>xx</td>
+                                  <td>
+                                    <button> แก้ไข </button>
+                                    <button> ลบ </button>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                            <div class="card-body d-flex p-2 top-border">
+                              <div>
+                                <button> บันทึกการตรวจสอบอุณหภูมิลูกกลิ้ง </button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <!--
+                <div class="tab-content">
+                  <div class="card tab-pane fade show active" id="record_1" role="tabpanel">
+                    <div class="card-header form-inline">
+                      <div class="d-flex justify-content-start align-items-baseline">
+                        <span>ตรวจสอบความหนา - ระยะที่ #4 : </span>
+                        <input class="form-control mx-2" value="100" size="5">
+                        <span>เมตร</span>
+                      </div>
+                    </div>
+                    <div class="card-body p-2">
+                      <p class="card-title px-2">ความหนา</p>
+                      <div class="form-row form-inline">
+                        <div class="form-group col-md-4">
+                          <label class="mr-3"> หนาบน </label>
+                          <div class="input-group">
+                            <input type="text" class="form-control">
+                            <div class="input-group-append px-2 pt-2 border-1 text-muted"> มิล </div>
+                          </div>
+                        </div>
+                        <div class="form-group col-md-4">
+                          <label class="mr-3"> หนาล่าง </label>
+                          <div class="input-group">
+                            <input type="text" class="form-control">
+                            <div class="input-group-append px-2 pt-2 border-1 text-muted"> มิล </div>
+                          </div>
+                        </div>
+                        <div class="form-group col-md-4">
+                          <label class="mr-3"> หนารวม </label>
+                          <div class="input-group">
+                            <input type="text" class="form-control">
+                            <div class="input-group-append px-2 pt-2 border-1 text-muted"> มิล </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group px-2">
+                        <label> หมายเหตุ </label>
+                        <textarea class="form-control"></textarea>
+                      </div>
+                      <hr>
+                      <div class="d-flex justify-content-end">
+                        <div class="px-2">
+                          <button> บันทึก </button>
+                        </div>
+                      </div>
+                      <!-- /.form-row -->
+                    </div>
+                  </div>
+                  <div class="card tab-pane fade show active" id="record_2" role="tabpanel">
+                    <div class="card-header form-inline">
+                      <div class="d-flex justify-content-start align-items-baseline">
+                        <span>ตรวจสอบอุณหภูมิ - ครั้งที่ #3 : </span>
+                      </div>
+                    </div>
+                    <div class="card-body p-2">
+                      <div class="form-row form-inline">
+                        <div class="form-group col-md-3">
+                          <label> อุณหภูมิ-ลูกกลิ้ง 1 </label>
+                          <div class="input-group">
+                            <input type="text" class="form-control">
+                            <div class="input-group-append px-2 pt-2 border-1 text-muted"> °C </div>
+                          </div>
+                        </div>
+                        <div class="form-group col-md-3">
+                          <label> อุณหภูมิ-ลูกกลิ้ง 2 </label>
+                          <div class="input-group">
+                            <input type="text" class="form-control">
+                            <div class="input-group-append px-2 pt-2 border-1 text-muted"> °C </div>
+                          </div>
+                        </div>
+                        <div class="form-group col-md-3">
+                          <label> อุณหภูมิ-ลูกกลิ้ง 3 </label>
+                          <div class="input-group">
+                            <input type="text" class="form-control">
+                            <div class="input-group-append px-2 pt-2 border-1 text-muted"> °C </div>
+                          </div>
+                        </div>
+                        <div class="form-group col-md-3">
+                          <label> อุณหภูมิ-ลูกกลิ้ง 4 </label>
+                          <div class="input-group">
+                            <input type="text" class="form-control">
+                            <div class="input-group-append px-2 pt-2 border-1 text-muted"> °C </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group px-2">
+                        <label> หมายเหตุ </label>
+                        <textarea class="form-control" rows="3"></textarea>
+                      </div>
+                      <hr>
+                      <div class="d-flex justify-content-end">
+                        <div class="px-2">
+                          <button> บันทึก </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="card p-2">
+                      <div class="card-body d-flex justify-content-center p-2">
+                        <div>
+                          <button> สิ้นสุดการทำงาน </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <!--
                 </div>   
               </div>
 -->
-              </form>
-            </div>
           </div>
         </div>
       </div>
-      <footer class="footer">
-        <div class="container">
-          <p class="copyright float-right"> ©
-            <script>
-              document.write(new Date().getFullYear())
-            </script>
-            <a href="#">Workbythai Internet And Marketing Co., Ltd.</a>
-          </p>
-        </div>
-      </footer>
     </div>
+    <footer class="footer">
+      <div class="container">
+        <p class="copyright float-right"> ©
+          <script>
+            document.write(new Date().getFullYear())
+          </script>
+          <a href="#">Workbythai Internet And Marketing Co., Ltd.</a>
+        </p>
+      </div>
+    </footer>
   </div>
   <!--   Core JS Files   -->
   <script src="../../assets/vendors/jquery-3.1.1.min.js" type="text/javascript"></script>
