--- a/pages/sample-pages_tor/delivery_02_planning.html
+++ b/pages/sample-pages_tor/delivery_02_planning.html
@@ -20,7 +20,7 @@
   <link href="../../assets/css/font-muli.css" rel="stylesheet" type="text/css">
   <link href="../../assets/css/custom.css" rel="stylesheet" type="text/css">
   <link href="../../assets/css/themify-icons.css" rel="stylesheet">
-  <link href="./mui.css" rel="stylesheet"> </head>
+  <link rel="stylesheet" href="mui.css"> </head>
 
 <body>
   <div class="wrapper">
@@ -52,7 +52,7 @@
               <p>งานขาย</p>
             </a>
           </li>
-          <li class="d-flex flex-column">
+          <li class="d-flex flex-column active">
             <a href="3_planing.html">
               <i class="nav-icon"></i>
               <p>วางแผนผลิต</p>
@@ -106,7 +106,7 @@
               <p>งานอบสายพาน(บันทึกการอบสายพาน)</p>
             </a>
           </li>
-          <li class="d-flex flex-column active">
+          <li class="d-flex flex-column">
             <a data-toggle="collapse" href="#tables" class="nav-link collapsed" aria-expanded="false">
               <p>คลังสินค้า
                 <i class="fa fa-sort-desc submenu-toggle"></i>
@@ -126,7 +126,7 @@
                 <li>
                   <a class="nav-link" href="4_In_Compound.html">นำเข้า Compound</a>
                 </li>
-                <li class="active">
+                <li>
                   <a class="nav-link" href="4_Out_Compound.html">นำออก Compound</a>
                 </li>
                 <li>
@@ -164,7 +164,7 @@
           <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarItems" aria-controls="navbarItems" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#">การนำออกยาง Compound</a>
+          <a class="navbar-brand" href="#">วางแผนจัดส่งสินค้า</a>
         </div>
         <div class="collapse navbar-collapse" id="navbarItems">
           <ul class="nav navbar-nav ml-auto">
@@ -209,158 +209,235 @@
       </nav>
       <div class="">
         <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-12">
-              <!--
-              <div class="card">
-                <div class="card-body p-2">
--->
-              <form class="form">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>เลขที่ใบแจ้งผลิต:</label>
-                          <span>M2018120100001</span>
-                        </div>
+          <div class="card">
+            <div class="card-body p-2">
+              <p class="lead">รายการสินค้า พร้อมส่ง</p>
+              <span class="px-2">ทั้งหมด 4 รายการ</span>
+              <table class="table table-bordered top-border">
+                <thead class="font-smr text-nowrap">
+                  <tr>
+                    <th>#</th>
+                    <th>กำหนดส่ง</th>
+                    <th> เลขที่ </th>
+                    <th>ลูกค้า</th>
+                    <th>สถานที่จัดส่ง/
+                      <br>จำนวน</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody class="align-text-top">
+                  <tr class="table-light">
+                    <td>1</td>
+                    <td>1/6/61 </td>
+                    <td class="text-nowrap">
+                      <div>
+                        <span>1800104</span>
                       </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>วันที่สั่งซื้อ: &nbsp;</label>
-                          <span>1/12/2561</span>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>กำหนดส่ง: </label>
-                          <span>31/12/2561</span>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                    </td>
+                    <td> AAAAAAAAA </td>
+                    <td> มารับเอง </td>
+                    <td>
+                      <button data-toggle="modal" data-target="#qty"> เลือก </button>
+                    </td>
+                  </tr>
+                  <tr class="table-light">
+                    <td class=""></td>
+                    <td colspan="3"> บั้ง (ดำ) M/PI (4+2=10) 22 นิ้ว x 5 ชั้น EP160 15 เมตร (ตัดยาว) </td>
+                    <td> 2 เส้น
+                      <span class="font-smr">(50 kg.)</span>
+                    </td>
+                    <td></td>
+                  </tr>
+                  <tr class="">
+                    <td>2</td>
+                    <td>1/6/61</td>
+                    <td>1800105</td>
+                    <td>BBBBBBBBBBBBB</td>
+                    <td> รอแจ้งกลับ </td>
+                    <td>
+                      <button data-target="#qty" data-toggle="modal"> เลือก </button>
+                    </td>
+                  </tr>
+                  <tr class="">
+                    <td></td>
+                    <td colspan="3"> บั้ง (ดำ) M/PI (3+1.5=7) 22 นิ้ว x 3 ชั้น EP160 50 เมตร (ต่อกลม) </td>
+                    <td> 2 เส้น
+                      <span class="font-smr">(30 kg.)</span>
+                    </td>
+                    <td></td>
+                  </tr>
+                  <tr class="table-light">
+                    <td>3</td>
+                    <td>1/6/61</td>
+                    <td>6100103</td>
+                    <td>CCCCCCCCCCC</td>
+                    <td> ขนส่ง นิ่มซีเส็ง</td>
+                    <td>
+                      <button data-target="#qty" data-toggle="modal"> เลือก </button>
+                    </td>
+                  </tr>
+                  <tr class="table-light">
+                    <td></td>
+                    <td colspan="3"> บั้ง (ดำ) M/PI (4+2=10) 22 นิ้ว x 3 ชั้น EP160 100 เมตร (ต่อกลม) </td>
+                    <td> 3 เส้น
+                      <span class="font-smr">(50 kg.)</span>
+                    </td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td>4</td>
+                    <td>1/6/61</td>
+                    <td>6100104</td>
+                    <td>DDDDDDDDDDDD</td>
+                    <td> ชลบุรี </td>
+                    <td>
+                      <button data-target="#qty" data-toggle="modal"> เลือก </button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td colspan="3"> บั้ง (ดำ) M/PI (4+2=10) 22 นิ้ว x 3 ชั้น EP160 200 เมตร (ต่อกลม) </td>
+                    <td> 1 เส้น
+                      <span class="font-smr">(100 kg.)</span>
+                    </td>
+                    <td></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body p-2">
+              <p class="lead"> รายการจัดส่ง : วันที่ xx/xx/xxxx</p>
+              <div class="d-flex justify-content-between p-2">
+                <div class="flex-grow-1">
+                  <span class="">
+                    <b>3 รายการ</b>
+                  </span>
                 </div>
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="card">
-                      <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs">
-                          <li class="nav-item">
-                            <a class="nav-link active" href="#" data-toggle="tab" data-target="#tabone">รายละเอียดสายพาน</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#" data-toggle="tab" data-target="#tabtwo">รายละเอียดลูกค้า</a>
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="card-body p-2">
-                        <div class="tab-content mt-2">
-                          <div class="tab-pane fade show active" id="tabone" role="tabpanel">
-                            <p> บั้ง สีดำ 40 นิ้ว x 5 ชั้น EP 120 / เกรด M (M/PI) </p>
-                            <p> หนา: 3/2 มม. หนารวม: 10 มม. / ยาว 15 เมตร, ต่อกลม, ตีตรา MUI </p>
-                          </div>
-                          <div class="tab-pane fade" id="tabtwo" role="tabpanel">
-                            <p class=""> ชื่อลูกค้า: ชลบุรี เอ็มยูไอ ไพศาล </p>
-                            <p> ประเภทลูกค้า: ลูกค้าพิเศษ </p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                <div class="">
+                  <span>น้ำหนักรวม:
+                    <b>XXXX</b> kg.</span>
                 </div>
-                <div class="card p-2">
-                  <div class="row">
-                    <div class="col-md-12">
-                      <p class="lead">นำออก Compound </p>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="p-2 ">
-                        <label for="inputGrade" class="col-form-label">สูตรยาง</label>
-                        <div class="dropdown">
-                          <select id="country" required="" class="form-control">
-                            <option value="">เลือกสูตรยาง</option>
-                          </select>
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">P</a>
-                            <a class="dropdown-item" href="#">N</a>
-                            <a class="dropdown-item" href="#">M</a>
-                            <a class="dropdown-item" href="#">OR-1</a>
-                            <a class="dropdown-item" href="#">OR-2</a>
-                            <a class="dropdown-item" href="#">HR-100</a>
-                            <a class="dropdown-item" href="#">HR-120</a>
-                            <a class="dropdown-item" href="#">HR-150</a>
-                            <a class="dropdown-item" href="#">ทดกรด/ต่าง</a>
-                            <a class="dropdown-item" href="#">ยิงทราย</a>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="p-2 ">
-                        <label for="inputBeltWidth" class="col-form-label">Batch No.</label>
-                        <input type="text" class="form-control" id="inputBeltWidth" placeholder="ระบุBatch No."> </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="p-2 ">
-                        <label for="inputBeltWidth" class="col-form-label">น้ำหนักยางที่ต้องการเบิก</label>
-                        <input type="text" class="form-control" id="inputBeltWidth" placeholder="ระบุน้ำหนักยาง"> </div>
-                      <div class="p-2 ">
-                        <label for="inputGrade" class="col-form-label">&nbsp;</label>
-                        <div class="dropdown">
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">P</a>
-                            <a class="dropdown-item" href="#">N</a>
-                            <a class="dropdown-item" href="#">M</a>
-                            <a class="dropdown-item" href="#">OR-1</a>
-                            <a class="dropdown-item" href="#">OR-2</a>
-                            <a class="dropdown-item" href="#">HR-100</a>
-                            <a class="dropdown-item" href="#">HR-120</a>
-                            <a class="dropdown-item" href="#">HR-150</a>
-                            <a class="dropdown-item" href="#">ทดกรด/ต่าง</a>
-                            <a class="dropdown-item" href="#">ยิงทราย</a>
-                          </div>
-                        </div>
-                        <a href="#" class="btn btn-outline-primary pull-right btn-block">บันทึก</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12"> </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12"> </div>
-                </div>
-                <!--
-                </div>   
               </div>
--->
-              </form>
+              <table class="table table-bordered">
+                <thead class="font-smr">
+                  <tr>
+                    <th>#</th>
+                    <th>เลขที่</th>
+                    <th>รายการสินค้า</th>
+                    <th>จำนวน</th>
+                    <th>ลูกค้า</th>
+                    <th>สถานที่จัดส่ง</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody class="align-text-top">
+                  <tr>
+                    <td>1</td>
+                    <td>1800101</td>
+                    <td> บั้ง (ดำ) M/PI (4+2=10)
+                      <br> 22 นิ้ว x 5 ชั้น EP160
+                      <br> 15 เมตร (ตัดยาว) </td>
+                    <td>
+                      <div class="mb-2"> 1 เส้น </div>
+                      <span class="font-smr">50 kg.</span>
+                    </td>
+                    <td> AAAAAAAAA </td>
+                    <td> ชลบุรี </td>
+                    <td>
+                      <button> ยกเลิก </button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>1800102</td>
+                    <td>เรียบ (ดำ) M/PI (4+2=10)
+                      <br> 22 นิ้ว x 5 ชั้น EP160
+                      <br> 50 เมตร (ตัดยาว) </td>
+                    <td>
+                      <div class="mb-2"> 2 เส้น </div>
+                      <span class="font-smr">130 kg.</span>
+                    </td>
+                    <td> NNNNNNNNNN </td>
+                    <td> ชลบุรี </td>
+                    <td>
+                      <button> ยกเลิก </button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>6100102</td>
+                    <td>เรียบ (ดำ) M/PI (4+2=10)
+                      <br> 22 นิ้ว x 5 ชั้น EP160
+                      <br> 100 เมตร (ตัดยาว) </td>
+                    <td>
+                      <div class="mb-2"> 1 เส้น </div>
+                      <span class="font-smr">50 kg.</span>
+                    </td>
+                    <td> xxxxxxxxxxx </td>
+                    <td> ขนส่ง สี่สหาย </td>
+                    <td>
+                      <button> ยกเลิก </button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <hr>
+              <div class="d-flex justify-content-between align-items-baseline pb-2">
+                <div class="pagination-info flex-grow-1 px-2">
+                  <button> พิมพ์ </button>
+                </div>
+                <div class="px-2">
+                  <button> บันทึก </button>
+                  <button> บันทึกและพิมพ์ </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 px-3">
+              <span class="text-muted">พิมพ์ครั้งสุดท้ายเมื่อ: xx/xx/xxxx</span>
             </div>
           </div>
         </div>
       </div>
-      <footer class="footer">
-        <div class="container">
-          <p class="copyright float-right"> ©
-            <script>
-              document.write(new Date().getFullYear())
-            </script>
-            <a href="#">Workbythai Internet And Marketing Co., Ltd.</a>
-          </p>
+      <footer class="footer"></footer>
+    </div>
+  </div>
+  <div class="modal fade show" id="qty" tabindex="-1" rold="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"> ระบุจำนวนในการจัดส่ง </h5>
+          <button type="button" class="close" data-dismiss="modal">
+            <span>×</span>
+          </button>
         </div>
-      </footer>
+        <div class="modal-body">
+          <div class="form-group row pt-3">
+            <label class="offset-md-2 col-md-3 col-form-label"> จำนวน </label>
+            <div class="col-md-5">
+              <div class="input-group">
+                <input type="text" class="form-control">
+                <div class="input-group-append px-2 pt-2 border-1 text-muted"> เส้น </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">บันทึก</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">ยกเลิก</button>
+        </div>
+      </div>
     </div>
   </div>
   <!--   Core JS Files   -->
+  <!-- <div class="text-center bg-dark" style="background-image: url(&quot;none&quot;);">
+    <div class="container-fluid">
+      <div class="row"> </div>
+    </div>
+  </div> -->
   <script src="../../assets/vendors/jquery-3.1.1.min.js" type="text/javascript"></script>
   <script src="../../assets/vendors/jquery-ui.min.js" type="text/javascript"></script>
   <script src="../../assets/vendors/tether.min.js" type="text/javascript"></script>
