--- a/pages/sample-pages_tor/splicing_02.html
+++ b/pages/sample-pages_tor/splicing_02.html
@@ -64,7 +64,7 @@
               <p>ตัดผ้า</p>
             </a>
           </li>
-          <li class="d-flex flex-column">
+          <li class="d-flex flex-column active">
             <a href="9_Glue_Coating.html">
               <i class="nav-icon"></i>
               <p>เคลือบน้ำกาว</p>
@@ -76,7 +76,7 @@
               <p>ประกบผ้า</p>
             </a>
           </li>
-          <li class="d-flex flex-column active">
+          <li class="d-flex flex-column">
             <a href="11_calender.html">
               <i class="nav-icon"></i>
               <p>เคลือบผิว</p>
@@ -164,7 +164,7 @@
           <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navbarItems" aria-controls="navbarItems" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#">เคลือบผิว</a>
+          <a class="navbar-brand" href="#"> ต่อหัวสายพาน </a>
         </div>
         <div class="collapse navbar-collapse" id="navbarItems">
           <ul class="nav navbar-nav ml-auto">
@@ -277,252 +277,99 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-4">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>หนาบน</label>
-                          <div class="input-group">
-                            <input type="text" class="form-control" aria-label="...">
-                            <div class="input-group-btn">
-                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
-                                <span class="caret"></span>
-                              </button>
-                              <ul class="dropdown-menu dropdown-menu-right">
-                                <li>
-                                  <a href="#">มม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ซม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ม.</a>
-                                </li>
-                              </ul>
-                            </div>
-                            <!-- /btn-group -->
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>หนาล่าง</label>
-                          <div class="input-group">
-                            <input type="text" class="form-control" aria-label="...">
-                            <div class="input-group-btn">
-                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
-                                <span class="caret"></span>
-                              </button>
-                              <ul class="dropdown-menu dropdown-menu-right">
-                                <li>
-                                  <a href="#">มม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ซม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ม.</a>
-                                </li>
-                              </ul>
-                            </div>
-                            <!-- /btn-group -->
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>หนารวม</label>
-                          <div class="input-group">
-                            <input type="text" class="form-control" aria-label="...">
-                            <div class="input-group-btn">
-                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
-                                <span class="caret"></span>
-                              </button>
-                              <ul class="dropdown-menu dropdown-menu-right">
-                                <li>
-                                  <a href="#">มม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ซม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ม.</a>
-                                </li>
-                              </ul>
-                            </div>
-                            <!-- /btn-group -->
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>อุณหภูมิลูกลิ้งที่ 1</label>
-                          <input type="text" class="form-control" id="lastName" value="" required=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>อุณหภูมิลูกลิ้งที่ 2</label>
-                          <input type="text" class="form-control" id="lastName" value="" required=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>อุณหภูมิลูกลิ้งที่ 3</label>
-                          <input type="text" class="form-control" id="lastName" required="" value=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>อุณหภูมิลูกลิ้งที่ 4</label>
-                          <input type="text" class="form-control" id="lastName" required="" value=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>เวลาเข้า</label>
-                          <input type="time" class="form-control" id="firstName" value="" required=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>เวลาออก</label>
-                          <input type="time" class="form-control" id="firstName" required="" value=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>รอบความเร็ว</label>
-                          <div class="input-group">
-                            <input type="text" class="form-control" aria-label="...">
-                            <div class="input-group-btn">
-                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
-                                <span class="caret"></span>
-                              </button>
-                              <ul class="dropdown-menu dropdown-menu-right">
-                                <li>
-                                  <a href="#">ซม./นาที</a>
-                                </li>
-                                <li>
-                                  <a href="#">เมตร./นาที</a>
-                                </li>
-                              </ul>
-                            </div>
-                            <!-- /btn-group -->
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card">
-                      <div class="card-body p-2">
-                        <div>
-                          <label>ความยาวที่เคลือบได้</label>
-                          <div class="input-group">
-                            <input type="text" class="form-control" aria-label="...">
-                            <div class="input-group-btn">
-                              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">หน่วย
-                                <span class="caret"></span>
-                              </button>
-                              <ul class="dropdown-menu dropdown-menu-right">
-                                <li>
-                                  <a href="#">มม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ซม.</a>
-                                </li>
-                                <li>
-                                  <a href="#">ม.</a>
-                                </li>
-                              </ul>
-                            </div>
-                            <!-- /btn-group -->
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
                   <div class="col-md-12">
                     <div class="card">
                       <div class="card-body p-2">
-                        <div>
-                          <label>หมายเหตุ</label>
-                          <input type="text" class="form-control" id="lastName" required="" value=""> </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-body p-2">
-                    <div class="row">
-                      <div class="col-md-6"></div>
-                      <div class="col-md-6">
-                        <a href="#" class="btn btn-outline-primary pull-right btn-block">บันทึก</a>
+                        <p class="card-body-title px-2"> ระยะเวลาทำงาน </p>
+                        <div class="form-row form-inline">
+                          <div class="form-group col-md-3">
+                            <label> เวลาเริ่ม </label>
+                            <div class="input-group">
+                              <input type="text" class="form-control">
+                              <div class="input-group-append px-2 pt-2 border-1 text-muted"> น. </div>
+                            </div>
+                          </div>
+                          <div class="form-group col-md-3">
+                            <label> เวลาเสร็จ </label>
+                            <div class="input-group">
+                              <input type="text" class="form-control">
+                              <div class="input-group-append px-2 pt-2 border-1 text-muted"> น. </div>
+                            </div>
+                          </div>
+                        </div>
+                        <hr>
+                        <p class="card-body-title px-2"> ข้อมูลงานต่อหัว </p>
+                        <div class="row">
+                          <div class="col-md-3">
+                            <div class="form-group">
+                              <label> จำนวนเส้น </label>
+                              <div class="input-group">
+                                <input type="text" class="form-control">
+                                <div class="input-group-append px-2 pt-2 border-1 text-muted"> เส้น </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-3">
+                            <div class="form-group">
+                              <label> จำนวนหัวต่อ </label>
+                              <div class="input-group">
+                                <input type="text" class="form-control">
+                                <div class="input-group-append px-2 pt-2 border-1 text-muted"> หัว </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-3">
+                            <div class="form-group px-2">
+                              <label> แรงดันไอน้ำ </label>
+                              <div class="input-group">
+                                <input type="text" class="form-control">
+                                <div class="input-group-append px-2 pt-2 border-1 text-muted"> kg. </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-3">
+                            <div class="form-group">
+                              <label> แรงอัด </label>
+                              <div class="input-group">
+                                <input type="text" class="form-control"> </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-md-12">
+                            <label> หมายเหตุ </label>
+                            <input type="text" class="form-control"> </div>
+                        </div>
+                        <hr>
+                        <div class="d-flex justify-content-end">
+                          <div class="px-2">
+                            <button> บันทึก </button>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </form>
-            </div>
-            <!--
+              <!--
                 </div>   
               </div>
 -->
+            </div>
           </div>
         </div>
       </div>
+      <footer class="footer">
+        <div class="container">
+          <p class="copyright float-right"> ©
+            <script>
+              document.write(new Date().getFullYear())
+            </script>
+            <a href="#">Workbythai Internet And Marketing Co., Ltd.</a>
+          </p>
+        </div>
+      </footer>
     </div>
-    <footer class="footer">
-      <div class="container">
-        <p class="copyright float-right"> ©
-          <script>
-            document.write(new Date().getFullYear())
-          </script>
-          <a href="#">Workbythai Internet And Marketing Co., Ltd.</a>
-        </p>
-      </div>
-    </footer>
   </div>
   <!--   Core JS Files   -->
   <script src="../../assets/vendors/jquery-3.1.1.min.js" type="text/javascript"></script>
